# value-object

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ipy.yml  makefile  mkdocs.yml  mypy.ini  pyproject.toml
.agents/commands/: code-review.md  commit.md  security-review.md  technical-debt-review.md
.agents/skills/: README.md
.agents/skills/adr/: SKILL.md
.agents/skills/complexity-review/: REFERENCE.md  SKILL.md
.agents/skills/design-doc/: SKILL.md
.agents/skills/hamburger-method/: REFERENCE.md  SKILL.md
.agents/skills/micro-steps-coach/: REFERENCE.md  SKILL.md
.agents/skills/mutation-testing/: SKILL.md
.agents/skills/story-splitting/: REFERENCE.md  SKILL.md
.agents/skills/test-desiderata/: REFERENCE.md  SKILL.md
.agents/skills/xp-refactor/: SKILL.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/actions/python_setup/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/adrs/: adr-guidelines.md
docs/design_docs/: 0001-optional-mother-extras-install.md  design-doc-guidelines.md
docs/documentation/assets/: extra.css
docs/documentation/contributing/: contributing_guide.md  security.md
docs/documentation/getting_started/: first_steps.md  index.md  installation.md
docs/documentation/home/: index.md
docs/documentation/value_objects/: aggregate_roots.md  built_in_vo.md  customizing_vo.md  index.md  migration_guide.md  optional.md  validation.md
src/value_object/: __init__.py  aggregate.py  optional.py  value_object.py
src/value_object/errors/: incorrect_value_type_error.py  invalid_id_format_error.py  required_value_error.py
src/value_object/identifiers/: string_uuid.py
src/value_object/primitives/: boolean.py  float.py  integer.py  list.py  string.py
test/: test_optional.py
test/identifiers/: test_string_uuid.py
test/primitives/: test_boolean.py  test_float.py  test_integer.py  test_list.py  test_string.py
